refactor codes, added support for DeepSeek-R1-Distill-Llama-8B_Q8_0.gguf