@@ -2,6 +2,7 @@ plugins {
     id("com.github.johnrengelman.shadow") version "8.1.1"
     id("io.micronaut.application") version "4.4.4"
     id("io.micronaut.aot") version "4.4.4"
+     id("org.graalvm.buildtools.native") version "0.10.1"
 }
 
 version = "0.1"
@@ -13,11 +14,12 @@ repositories {
 
 dependencies {
     annotationProcessor("org.projectlombok:lombok")
+    annotationProcessor("io.micronaut:micronaut-graal")
     annotationProcessor("io.micronaut:micronaut-http-validation")
     annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
     implementation("io.micronaut.serde:micronaut-serde-jackson")
+    implementation("io.micronaut.reactor:micronaut-reactor")
     compileOnly("org.projectlombok:lombok")
-    compileOnly("io.projectreactor:reactor-core")
     compileOnly("io.micronaut:micronaut-http-client")
     runtimeOnly("ch.qos.logback:logback-classic")
     testImplementation("io.micronaut:micronaut-http-client")
@@ -27,7 +29,6 @@ dependencies {
 application {
     mainClass = "example.micronaut.Application"
     applicationDefaultJvmArgs = [
-        '--enable-preview',
         '--add-modules', 'jdk.incubator.vector'
     ]
 }
@@ -39,15 +40,20 @@ java {
 
 tasks.withType(JavaCompile) {
     options.compilerArgs += [
-        '--enable-preview', 
         '--add-modules', 'jdk.incubator.vector'
     ]
 }
 
 tasks.withType(JavaExec) {
     jvmArgs += [
-        '--enable-preview',
-        '--add-modules', 'jdk.incubator.vector'
+        '--add-modules', 'jdk.incubator.vector',
+        '-XX:+AlignVector',
+        '-XX:+UseCompressedOops',
+        '-XX:ParallelGCThreads=8',
+        '-XX:ConcGCThreads=4',
+        '-XX:+UseZGC',
+        '-Xmx4g',
+        '-Xms4g'
     ]
 }
 
@@ -62,11 +68,14 @@ graalvmNative {
                 '--add-modules=jdk.incubator.vector',
 		        '-O3',
                 '-march=x86-64',
-                '--initialize-at-build-time=com.example.Application', 
                 '--enable-monitoring=heapdump,jfr',
-                '-H:+UnlockExperimentalVMOptions',
                 '-H:+ForeignAPISupport',
+                '-H:+UnlockExperimentalVMOptions',
                 '-H:+ReportExceptionStackTraces', 
+                '-H:+AddAllCharsets'
+            ])
+            jvmArgs.addAll([
+                '-XX:+AlignVector'
             ])
         }
     }
@@ -87,7 +96,7 @@ micronaut {
         optimizeClassLoading = true
         deduceEnvironment = true
         optimizeNetty = true
-        replaceLogbackXml = true
+        replaceLogbackXml = true    
     }
 }
 
